--- a/css/style.css
+++ b/css/style.css
@@ -8348,34 +8348,38 @@ body {
           width: 30px; }
 
   /* line 206, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .logo {
+    height: 45px; }
+
+  /* line 209, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     padding: 15px; }
-    /* line 209, ../scss/fxj/_navbar-header.scss */
+    /* line 212, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .caret {
       border-width: 10px; }
-    /* line 213, ../scss/fxj/_navbar-header.scss */
+    /* line 216, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .btn:not(.dropdown-toggle) {
       font-size: 2rem;
       padding-left: 0;
       text-align: left;
       width: calc(100% - 40px); }
-    /* line 219, ../scss/fxj/_navbar-header.scss */
+    /* line 222, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .dropdown-menu {
       -webkit-box-shadow: none;
       box-shadow: none;
       background-color: transparent;
       position: relative; }
-      /* line 224, ../scss/fxj/_navbar-header.scss */
+      /* line 227, ../scss/fxj/_navbar-header.scss */
       .navbar-nav .dropdown-menu a {
         font-size: 2rem; }
-    /* line 228, ../scss/fxj/_navbar-header.scss */
+    /* line 231, ../scss/fxj/_navbar-header.scss */
     .navbar-nav .btn-group {
       display: block; }
-      /* line 232, ../scss/fxj/_navbar-header.scss */
+      /* line 235, ../scss/fxj/_navbar-header.scss */
       .navbar-nav .btn-group.open + .dropdown-menu {
         float: none;
         position: static; }
-    /* line 238, ../scss/fxj/_navbar-header.scss */
+    /* line 241, ../scss/fxj/_navbar-header.scss */
     .navbar-nav li {
       margin-bottom: 5px; }
       /* line 14, ../bootstrap/stylesheets/bootstrap/mixins/_clearfix.scss */
@@ -8386,134 +8390,134 @@ body {
       .navbar-nav li:after {
         clear: both; } }
 @media (min-width: 768px) {
-  /* line 245, ../scss/fxj/_navbar-header.scss */
+  /* line 248, ../scss/fxj/_navbar-header.scss */
   .navbar {
     background-color: white; }
-    /* line 249, ../scss/fxj/_navbar-header.scss */
+    /* line 252, ../scss/fxj/_navbar-header.scss */
     .navbar-collapse .block[id*="botondona"] {
       display: none; }
 
-  /* line 254, ../scss/fxj/_navbar-header.scss */
+  /* line 257, ../scss/fxj/_navbar-header.scss */
   .navbar-header {
     width: 100%; }
-    /* line 257, ../scss/fxj/_navbar-header.scss */
+    /* line 260, ../scss/fxj/_navbar-header.scss */
     .navbar-header .logo {
       margin-left: 0; }
-    /* line 261, ../scss/fxj/_navbar-header.scss */
+    /* line 264, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block[id*="botondona"] {
       margin-right: 37px; }
-    /* line 266, ../scss/fxj/_navbar-header.scss */
+    /* line 269, ../scss/fxj/_navbar-header.scss */
     .navbar-header .region-navigation > .search-block-form {
       right: 0px;
       top: 15px; }
-      /* line 270, ../scss/fxj/_navbar-header.scss */
+      /* line 273, ../scss/fxj/_navbar-header.scss */
       .navbar-header .region-navigation > .search-block-form .form-item {
         margin-bottom: 0; }
 
-  /* line 275, ../scss/fxj/_navbar-header.scss */
+  /* line 278, ../scss/fxj/_navbar-header.scss */
   .region-navigation-collapsible {
     position: relative; }
-    /* line 279, ../scss/fxj/_navbar-header.scss */
+    /* line 282, ../scss/fxj/_navbar-header.scss */
     .region-navigation-collapsible .block[id*="dropdownlanguagecontent"], .region-navigation-collapsible .block[id*="dropdownlanguagecontenido"], .region-navigation-collapsible .block[id*="redessociales"] {
       display: none; }
-    /* line 286, ../scss/fxj/_navbar-header.scss */
+    /* line 289, ../scss/fxj/_navbar-header.scss */
     .region-navigation-collapsible nav[id*="navegacionsecundaria"] {
       display: none; }
 
-  /* line 291, ../scss/fxj/_navbar-header.scss */
+  /* line 294, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     position: absolute;
     right: 14.5rem;
     top: 7px; }
-    /* line 296, ../scss/fxj/_navbar-header.scss */
+    /* line 299, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 5px 0 0; }
-      /* line 301, ../scss/fxj/_navbar-header.scss */
+      /* line 304, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
         border-color: #16a085; }
-      /* line 307, ../scss/fxj/_navbar-header.scss */
+      /* line 310, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn {
         padding: 15px 0 18px 0; }
-        /* line 310, ../scss/fxj/_navbar-header.scss */
+        /* line 313, ../scss/fxj/_navbar-header.scss */
         .navbar-nav > li .btn:not(.dropdown-toggle) {
           border-bottom: 5px solid white;
           font-weight: 300;
           text-decoration: none; }
-          /* line 315, ../scss/fxj/_navbar-header.scss */
+          /* line 318, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):hover, .navbar-nav > li .btn:not(.dropdown-toggle):focus {
             color: #16a085; }
-          /* line 320, ../scss/fxj/_navbar-header.scss */
+          /* line 323, ../scss/fxj/_navbar-header.scss */
           .navbar-nav > li .btn:not(.dropdown-toggle):after {
             color: #777777;
             content: "|";
             display: inline-block;
             margin: 0 0 0 8px; }
-      /* line 330, ../scss/fxj/_navbar-header.scss */
+      /* line 333, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li.active .btn:not(.dropdown-toggle) {
         border-bottom-color: #16a085; } }
 @media (min-width: 992px) {
-  /* line 339, ../scss/fxj/_navbar-header.scss */
+  /* line 342, ../scss/fxj/_navbar-header.scss */
   .navbar-header .block[id*="botondona"] {
     margin-right: 47px;
     padding: 0 15px; }
 
-  /* line 344, ../scss/fxj/_navbar-header.scss */
+  /* line 347, ../scss/fxj/_navbar-header.scss */
   .navbar-nav {
     right: 19rem; }
-    /* line 346, ../scss/fxj/_navbar-header.scss */
+    /* line 349, ../scss/fxj/_navbar-header.scss */
     .navbar-nav > li {
       margin: 0 10px; }
-      /* line 348, ../scss/fxj/_navbar-header.scss */
+      /* line 351, ../scss/fxj/_navbar-header.scss */
       .navbar-nav > li .btn:not(.dropdown-toggle) {
         font-weight: 400; } }
-/* line 356, ../scss/fxj/_navbar-header.scss */
+/* line 359, ../scss/fxj/_navbar-header.scss */
 #block-fxj-alpha-search {
   display: none; }
 
-/* line 359, ../scss/fxj/_navbar-header.scss */
+/* line 362, ../scss/fxj/_navbar-header.scss */
 .spb-popup-main-wrapper {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background: rgba(255, 255, 255, 0.9) url(../logo.svg) no-repeat 10vw 1rem;
   background-size: 200px;
   border: 0; }
-  /* line 365, ../scss/fxj/_navbar-header.scss */
+  /* line 368, ../scss/fxj/_navbar-header.scss */
   .spb-popup-main-wrapper .search-block-form {
     margin: 30vh 10vw 0 10vw; }
-    /* line 368, ../scss/fxj/_navbar-header.scss */
+    /* line 371, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-control {
       background-color: transparent;
       font-size: 3rem; }
-      /* line 372, ../scss/fxj/_navbar-header.scss */
+      /* line 375, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
         font-size: 3rem; }
-      /* line 375, ../scss/fxj/_navbar-header.scss */
+      /* line 378, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control:-ms-input-placeholder {
         /* IE 10+ */
         font-size: 3rem; }
-      /* line 378, ../scss/fxj/_navbar-header.scss */
+      /* line 381, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-ms-input-placeholder {
         font-size: 3rem; }
-      /* line 381, ../scss/fxj/_navbar-header.scss */
+      /* line 384, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::placeholder {
         font-size: 3rem; }
-    /* line 386, ../scss/fxj/_navbar-header.scss */
+    /* line 389, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-submit {
       background-color: transparent;
       font-size: 2rem; }
 
-/* line 392, ../scss/fxj/_navbar-header.scss */
+/* line 395, ../scss/fxj/_navbar-header.scss */
 .spb_top_center {
   bottom: 0;
   left: 0;
   right: 0;
   top: 0; }
 
-/* line 398, ../scss/fxj/_navbar-header.scss */
+/* line 401, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-minimize {
   display: none; }
 
-/* line 401, ../scss/fxj/_navbar-header.scss */
+/* line 404, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-close {
   width: 4rem;
   height: 4rem;
@@ -8525,18 +8529,18 @@ body {
   right: 10vw;
   top: 1rem; }
 
-/* line 411, ../scss/fxj/_navbar-header.scss */
+/* line 414, ../scss/fxj/_navbar-header.scss */
 #search-popup {
   border: 0;
   color: #777777;
   display: none;
   background-color: transparent;
   border-color: transparent; }
-  /* line 418, ../scss/fxj/_navbar-header.scss */
+  /* line 421, ../scss/fxj/_navbar-header.scss */
   #search-popup:hover, #search-popup:focus {
     color: #16a085; }
 
-/* line 423, ../scss/fxj/_navbar-header.scss */
+/* line 426, ../scss/fxj/_navbar-header.scss */
 .simple-popup-blocks-global + #search-popup {
   display: block;
   font-size: 2rem;
@@ -8545,7 +8549,7 @@ body {
   top: 15px; }
 
 @media (min-width: 768px) {
-  /* line 431, ../scss/fxj/_navbar-header.scss */
+  /* line 434, ../scss/fxj/_navbar-header.scss */
   .simple-popup-blocks-global + #search-popup {
     right: -10px; } }
 /* line 2, ../scss/fxj/_forms.scss */
