feat(slider transition): fade rather than slide

--- a/templates/views-bootstrap-carousel.html.twig
+++ b/templates/views-bootstrap-carousel.html.twig
@@ -19,7 +19,7 @@
  * @ingroup themeable
  */
 #}
-<div id="{{ id }}" class="carousel slide" data-ride="carousel" data-interval="{{ interval }}" data-pause="{{ pause }}" data-wrap="{{ wrap }}">
+<div id="{{ id }}" class="carousel slide carousel-fade" data-ride="carousel" data-interval="{{ interval }}" data-pause="{{ pause }}" data-wrap="{{ wrap }}">
 
   {# Carousel indicators #}
   {% if indicators %}
