--- a/css/style.css
+++ b/css/style.css
@@ -8986,24 +8986,16 @@ a.a2a_i, i.a2a_i {
 .twitter-tweet-rendered {
   margin-top: 0 !important; }
 
-/* line 1, ../scss/fxj/_bootstrap-carousel.scss */
-.slider {
-  /*.region-slider{
-    @extend .clearfix;
-    max-width: $container-large-desktop;
-    margin-right: auto;
-    margin-left: auto;
-  }*/ }
-  /* line 2, ../scss/fxj/_bootstrap-carousel.scss */
-  .slider.container-fluid {
-    margin: 0;
-    max-width: none;
-    padding: 0; }
+/* line 2, ../scss/fxj/_bootstrap-carousel.scss */
+.slider.container-fluid {
+  margin: 0;
+  max-width: none;
+  padding: 0; }
 
-/* line 17, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 11, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel .item {
   text-align: center; }
-  /* line 19, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 13, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .item img {
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
@@ -9013,7 +9005,7 @@ a.a2a_i, i.a2a_i {
     left: calc((100% - 1440px)/2);
     position: relative;
     max-width: none; }
-/* line 28, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 22, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel .carousel-container {
   height: 100%;
   margin-right: auto;
@@ -9022,81 +9014,104 @@ a.a2a_i, i.a2a_i {
   top: 0;
   width: 100%;
   max-width: 1170px; }
-/* line 37, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 31, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel .carousel-caption {
   bottom: 70px;
   padding: 0;
   text-align: left;
   right: auto;
   width: 28rem; }
-  /* line 44, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 38, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-caption h3 {
     display: none;
     font-size: 3.2rem;
     font-weight: 600;
     margin: 0 0 20px 0;
     padding: 0; }
-  /* line 50, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 44, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-caption p {
     font-size: 3rem;
     font-weight: 600;
     margin: 0 0 10px 0;
     padding: 0; }
-  /* line 57, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 51, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-caption a {
     font-size: 1.6rem;
     font-weight: 300; }
-/* line 64, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 58, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel .carousel-indicators {
   bottom: 20px;
   margin-bottom: 0;
   max-width: 1170px; }
-  /* line 69, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 63, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-indicators li {
     width: 20px;
     height: 20px;
     border-radius: 10px;
     margin-right: 5px; }
-    /* line 74, ../scss/fxj/_bootstrap-carousel.scss */
+    /* line 68, ../scss/fxj/_bootstrap-carousel.scss */
     .carousel .carousel-indicators li:hover, .carousel .carousel-indicators li:focus, .carousel .carousel-indicators li.active {
       background-color: #16a085; }
-/* line 81, ../scss/fxj/_bootstrap-carousel.scss */
+/* line 75, ../scss/fxj/_bootstrap-carousel.scss */
 .carousel .carousel-control {
   opacity: 1;
   filter: alpha(opacity=100);
   background: transparent none; }
-  /* line 85, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 79, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control .glyphicon {
     width: 40px;
     height: 40px;
     border: 1px solid white;
     border-radius: 20px;
     font-size: 20px; }
-    /* line 91, ../scss/fxj/_bootstrap-carousel.scss */
+    /* line 85, ../scss/fxj/_bootstrap-carousel.scss */
     .carousel .carousel-control .glyphicon:before {
       margin-top: 8px;
       display: block; }
-    /* line 95, ../scss/fxj/_bootstrap-carousel.scss */
+    /* line 89, ../scss/fxj/_bootstrap-carousel.scss */
     .carousel .carousel-control .glyphicon-chevron-left, .carousel .carousel-control .glyphicon-chevron-right {
       top: auto;
       bottom: 20px; }
-  /* line 104, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 98, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control:hover .glyphicon, .carousel .carousel-control:focus .glyphicon {
     background-color: white;
     color: #16a085; }
+/* line 107, ../scss/fxj/_bootstrap-carousel.scss */
+.carousel-fade .carousel-inner .item {
+  transition-property: opacity; }
+/* line 111, ../scss/fxj/_bootstrap-carousel.scss */
+.carousel-fade .carousel-inner .item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  opacity: 0; }
+/* line 117, ../scss/fxj/_bootstrap-carousel.scss */
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1; }
+/* line 123, ../scss/fxj/_bootstrap-carousel.scss */
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  left: 0;
+  transform: translate3d(0, 0, 0); }
+/* line 132, ../scss/fxj/_bootstrap-carousel.scss */
+.carousel-fade .carousel-control {
+  z-index: 2; }
 
 @media (min-width: 1200px) {
-  /* line 131, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 157, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .item img {
     left: auto; }
-  /* line 135, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 161, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-container {
     margin-right: calc((100% - 1170px )/2);
     margin-left: calc((100% - 1170px)/2); }
-  /* line 139, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 165, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control.right {
     right: calc((100% - 1170px )/2); }
-  /* line 142, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 168, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-control.left {
     left: calc((100% - 1170px )/2); } }
 /* line 1, ../scss/fxj/_views.scss */
