--- a/scss/fxj/_bootstrap-carousel.scss
+++ b/scss/fxj/_bootstrap-carousel.scss
@@ -4,12 +4,6 @@
     max-width: none;
     padding: 0;
   }
-  /*.region-slider{
-    @extend .clearfix;
-    max-width: $container-large-desktop;
-    margin-right: auto;
-    margin-left: auto;
-  }*/
 }
 
 .carousel {
@@ -105,6 +99,38 @@
         background-color: white;
         color: $brand-primary;
       }
+    }
+  }
+
+  &-fade {
+    .carousel-inner {
+        .item {
+            transition-property: opacity;
+        }
+
+        .item,
+        .active.left,
+        .active.right {
+            opacity: 0;
+        }
+
+        .active,
+        .next.left,
+        .prev.right {
+            opacity: 1;
+        }
+
+        .next,
+        .prev,
+        .active.left,
+        .active.right {
+            left: 0;
+            transform: translate3d(0, 0, 0);
+        }
+    }
+
+    .carousel-control {
+        z-index: 2;
     }
   }
 }
